pricing issue solved. but layout issue still remains...

--- a/sites/all/modules/contrib/rooms/css/rooms_date_range_fields.css
+++ b/sites/all/modules/contrib/rooms/css/rooms_date_range_fields.css
@@ -34,7 +34,7 @@
   width: 10em;
 }
 .rooms-date-range .form-type-textfield label {
-  display: none;
+  display: none !important;
 }
 .rooms-date-range .date-padding,
 .rooms-date-range .container-inline-date .date-padding {
