--- a/sites/all/modules/contrib/rooms/modules/rooms_booking_manager/css/booking_search.css
+++ b/sites/all/modules/contrib/rooms/modules/rooms_booking_manager/css/booking_search.css
@@ -197,10 +197,12 @@
 .rooms-search-result__base_price{
   font-size:14px;
   color:white !important;
+  display:inline;
 }
 
 .rooms-search-result__unit_summary_wrapper{
   position: relative;
+  display:inline;
   bottom: 60px;
   left: 440px;
 }
